# xentara-simple-sample-microservice

./: CMakeLists.txt  README.md
config/: model.json
src/: Attributes.cpp  Attributes.hpp  Events.cpp  Events.hpp  Input.cpp  Input.hpp  Instance.cpp  Instance.hpp  Output.cpp  Output.hpp  Plugin.cpp  Plugin.hpp  SampleMicroservice.cpp  SampleMicroservice.hpp  ServiceProvider.cpp  ServiceProvider.hpp  Skill.cpp  Skill.hpp  Tasks.cpp  Tasks.hpp
